compiler/testData/diagnostics/tests/imports/MalformedImports.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
package test

import some.<!SYNTAX!><!>
import <!SYNTAX!>.some<!>
import <!SYNTAX!>.kotlin<!>
import kotlin.<!SYNTAX!><!>
import<!SYNTAX!><!>
import <!SYNTAX!>.<!>
import <!SYNTAX!>*<!>